# ai-crypto-trading-terminal

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  uv.toml
.github/workflows/: ci.yml
ai-personal-trading-terminal-docs/ai-personal-trading-terminal-l4-docs/: AI_GUARDRAILS.md  API.md  AUTH.md  AUTOMATION_DESIGN.md  AUTOMATION_LEVELS.md  CONFIG_VERSIONING.md  DATABASE.md  DECISION_RECORDS.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_CODES.md  EVENT_LOG_DESIGN.md  EXCHANGE_INTEGRATION.md  EXECUTION_DESIGN.md  EXECUTION_SAFETY.md  FRONTEND_PAGES.md  KILL_SWITCH.md  MODULES.md  MVP_ACCEPTANCE.md  OPERATIONS.md  ORDER_LIFECYCLE.md  PRD.md  README.md  RISK_RULES.md  SCOPE.md  SECURITY.md  SYSTEM_DESIGN.md  TESTING.md  USER_TRADING_CONFIG.template.md  WEBSOCKET_API.md
ai-personal-trading-terminal-docs/ai-personal-trading-terminal-l4-docs/adr/: ADR-0001-l4-not-l5.md  ADR-0002-risk-engine-first.md  ADR-0003-bitget-first.md  ADR-0004-fastapi-backend.md  ADR-0005-websocket-push.md  ADR-0006-tp-sl-flexible-strategy.md
apps/api/: alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 3edfb7d42645_align_v1_schema_metadata.py  9d7b8a3c2f1e_add_trade_journals_table.py  a7c8d9e0f1a2_add_candidate_plans.py  b2c3d4e5f6a7_add_execution_attempts_to_trade_plans.py  b8c9d0e1f2a3_add_candidate_plan_fk.py  c3d4e5f6a7b8_add_is_latest_to_check_tables.py  c9d0e1f2a3b4_add_is_latest_partial_unique_indexes.py  d0e1f2a3b4c5_add_v05_llm_explanation_fields.py  d4e5f6a7b8c9_add_ai_evaluation_results_table.py  e465fb3ecf35_init_v0_1_tables.py  e5f6a7b8c9d0_add_execution_tracking_to_trade_plans.py  f6a7b8c9d0e1_add_market_structure_snapshots.py  g0a1b2c3d4e5_add_confirmation_fields.py  h1b2c3d4e5f6_add_slippage_funding_to_position_sizing.py  i2c3d4e5f6a7_add_order_intents_and_execution_logs.py  j1e2f3a4b5c6_merge_v1_migration_heads.py
apps/api/src/app/: config.py  db.py  exceptions.py  main.py  response.py  security.py  seed.py
apps/api/src/app/api/: account.py  ai.py  auto_plans.py  configs.py  execution.py  journals.py  market.py  risk.py  router.py  system.py  trade_plans.py
apps/api/src/app/models/: __init__.py  account_risk_state.py  ai_evaluation_result.py  base.py  candidate_plan.py  config_version.py  decision_gate_result.py  execution_log.py  market_structure_snapshot.py  order_intent.py  position_sizing_result.py  risk_check.py  system_event.py  trade_journal.py  trade_plan.py  user_settings.py
apps/api/src/app/schemas/: config.py  system.py  trade_journal.py  trade_plan.py
apps/api/src/app/services/: account_sync_service.py  config_service.py  confirmation_service.py  dry_run_service.py  execution_service.py  kill_switch_service.py  plan_converter.py  plan_service.py  risk_state_service.py  trade_journal_service.py
apps/api/src/app/websocket/: __init__.py  manager.py  router.py
apps/api/tests/: conftest.py  test_acceptance.py  test_account_api.py  test_ai_api.py  test_auto_plans_api.py  test_check_plan_state.py  test_configs_api.py  test_execution_service.py  test_journals_api.py  test_market_api.py  test_market_structure_api.py  test_plan_service.py  test_risk_api.py  test_risk_state_service.py  test_security.py  test_system_api.py  test_trade_plans_api.py
apps/web/: package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/ai/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/execution/: page.tsx
apps/web/app/journal/: page.tsx
apps/web/app/market/: page.tsx
apps/web/app/plans/: page.tsx
apps/web/app/radar/: page.tsx
apps/web/app/review/: page.tsx
apps/web/app/risk/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/ai/: AIExplanationPanel.tsx  AIScoreCard.tsx  SignalList.tsx
apps/web/lib/: api-types.ts  api.ts  useWebSocket.ts  wsClient.ts
apps/web/store/: systemStore.ts
crypto-trading-terminal/: colors_and_type.css  crypto-trading-terminal.design  generation-tree.json  orchestration-summary.json
crypto-trading-terminal/pages/: dashboard.html  risk-center.html  trade-plans.html
crypto-trading-terminal/partials/: project-shell.html
docs/: EVALUATION_REPORT_2026-07-08.md
docs/superpowers/plans/: 2026-07-07-crypto-trading-terminal-v0.1.md
docs/superpowers/specs/: 2026-07-07-crypto-trading-terminal-v0.1-design.md
scripts/: export_openapi.py
(+28 files in other folders)
