[project]
name = "crypto-terminal"
version = "1.0.0"
description = "AI Personal Trading Terminal L4"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/position-sizing",
    "packages/risk-engine",
    "packages/decision-gate",
    "packages/config-versioning",
    "packages/exchange-adapter",
    "packages/ai-evaluator",
    "packages/market-structure",
    "packages/auto-plan-engine",
    "apps/api",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps/api/tests"]
# P1-3: 使用 importlib 模式避免多个 tests 目录注册成顶层 tests 包导致的收集错误
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apps/api/src", "packages/*/src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E701", "E702", "F401", "F403", "F405", "UP042", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["app", "shared", "position_sizing", "risk_engine", "decision_gate", "config_versioning", "exchange_adapter", "ai_evaluator", "market_structure", "auto_plan_engine"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
disallow_untyped_defs = false
exclude = ["tests/", "migrations/"]

# P1-3: SQLAlchemy 2.0 Mapped 类型在赋值 None 时报 assignment 错误，
# 这是 ORM 的已知类型标注限制（数据库字段可空但 Mapped 类型未标注 | None）
[[tool.mypy.overrides]]
module = ["app.services.execution_service", "app.services.confirmation_service", "app.models.*", "app.seed"]
disable_error_code = ["assignment", "arg-type"]
