[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0", "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0", "asyncpg>=0.29.0", "alembic>=1.13.0",
    "pydantic>=2.5.0", "pydantic-settings>=2.1.0",
    "shared", "position-sizing", "risk-engine", "decision-gate", "config-versioning",
    "exchange-adapter", "ai-evaluator", "market-structure", "auto-plan-engine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv.sources]
shared = { workspace = true }
position-sizing = { workspace = true }
risk-engine = { workspace = true }
decision-gate = { workspace = true }
config-versioning = { workspace = true }
exchange-adapter = { workspace = true }
ai-evaluator = { workspace = true }
market-structure = { workspace = true }
auto-plan-engine = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]